moved /tests to /test and added command file

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "engines": {
     "node": ">=8.0.0"
   },
+  "bin": {
+    "ts-transform": "./bin/ts-transform.js"
+  },
   "scripts": {
     "prepare": "npm run build",
     "lint": "tslint --project tsconfig.json --format verbose",
     "build": "rimraf asset/dist; tsc --project tsconfig.json --pretty",
     "build:watch": "yarn build --watch",
     "test": "jest",
-    "test:ci": "env FIXED_KAFKA_TOPICS=true yarn test:all",
-    "test:all": "yarn workspaces run test",
     "test:watch": "jest --forceExit=true --coverage=false --notify --watch --onlyChanged",
     "test:debug": "env DEBUG='*teraslice*' jest --forceExit=true --detectOpenHandles --coverage=false --runInBand"
   },
