--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,12 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
+        "rootDir": "src",
         "outDir": "dist",
         "module": "commonjs",
         "moduleResolution": "node",
         "target": "es2017",
-        "lib": [
-            "esnext"
-        ],
         "skipLibCheck": true,
         "experimentalDecorators": true,
-        "declaration": true,
-        "sourceMap": false,
-        "inlineSourceMap": true,
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
@@ -21,5 +15,8 @@
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "suppressImplicitAnyIndexErrors": true
-    }
+    },
+    "include": [
+        "src/**/*"
+    ]
 }
