added proper declarations for lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
         "skipLibCheck": true,
         "experimentalDecorators": true,
         "strict": true,
+        "declaration": true,
+        "sourceMap": false,
+        "inlineSourceMap": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
