--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "dependencies": {
     "@terascope/job-components": "^0.13.1",
+    "@types/validator": "^10.9.0",
     "@types/yargs": "^12.0.1",
     "lodash": "^4.17.11",
     "valid-url": "^1.0.9",
+    "validator": "^10.10.0",
     "xlucene-evaluator": "^0.2.1",
     "yargs": "^12.0.5"
   },
